--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
     "element-ui": "^2.4.5",
+    "js-audio-recorder": "^1.0.7",
+    "marked": "^2.0.3",
+    "mavon-editor": "^2.9.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0",
